--- a/SpointLiteVersion/Views/productos1/Inventario.cshtml
+++ b/SpointLiteVersion/Views/productos1/Inventario.cshtml
@@ -1,10 +1,9 @@
-﻿@model IEnumerable<SpointLiteVersion.Models.productos>
+﻿@model IEnumerable<SpointLiteVersion.Models.Inventario>
 
 @{
     ViewBag.Title = "Inventario";
 }
 
-<h2>Inventario</h2>
 
 <div class="container">
     <div class="row">
@@ -25,51 +24,58 @@
 
                             <tr>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.idProducto)
+                                    @Html.DisplayName("CÓDIGO")
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Descripcion)
+                                    @Html.DisplayName("DESCRIPCIÓN")
+
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.costo)
+                                    @Html.DisplayName("COSTO")
+
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Precio)
+                                    @Html.DisplayName("PRECIO")
+
                                 </th>
 
+                                <th>
+                                    @Html.DisplayName("CANTIDAD")
 
+                                </th>
 
-                                <th>Acciones</th>
+                                <th hidden>Acciones</th>
                             </tr>
                         </thead>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.idProducto)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Descripcion)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.costo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Precio)
-                                </td>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CodigoProducto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Descripcion)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.costo)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Precio)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.cantidad)
+                            </td>
 
 
 
 
-
-                                <td>
-                                    <a href="@Url.Action("Edit","productos1",new { id=item.idProducto})"><i class="fas fa-edit eliminar"></i></a> |
-                                    <a href="@Url.Action("Details","productos1",new { id=item.idProducto})"><i class="fas fa-info-circle eliminar "></i></a> |
-                                    <a href="@Url.Action("Delete","productos1",new { id=item.idProducto})"><i class="fas fa-trash-alt eliminar eli"></i></a>
+                            <td>
+                                <a hidden href="@Url.Action("DatosDetalle","productos1",new { id=item.CodigoProducto})" class="edit"><i class="fas fa-edit eliminar"></i></a>
+                             
 
 
-                                </td>
-                            </tr>
+                            </td>
+                        </tr>
                         }
 
                     </table>
@@ -78,15 +84,143 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+        <center>
+            <div class="modal-content" style="width:40%; margin-top:30%;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Opciones</h4>
+                </div>
+                <div class="modal-body">
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" id="btnsubmit" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </center>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
 <script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
 
 <script>
     $(document).ready(function () {
         $('#tabla').DataTable({
-            "pagingType": "full_numbers" // "simple" option for 'Previous' and 'Next' buttons only
+            "pagingType": "full_numbers", // "simple" option for 'Previous' and 'Next' buttons only
+            "language": {
+                "decimal": "",
+                "emptyTable": "NO HAY INFORMACION",
+                "info": "MOSTRANDO _START_ A _END_ de _TOTAL_ ENTRADAS",
+                "infoEmpty": "MOSTRANDO 0 to 0 of 0 ENTRADAS",
+                "infoFiltered": "(FILTRADO DE _MAX_ TOTAL ENTRADAS)",
+                "infoPostFix": "",
+                "thousands": ",",
+                "lengthMenu": "MOSTRAR _MENU_ ENTRADAS",
+                "loadingRecords": "CARGANDO...",
+                "processing": "PROCESANDO...",
+                "search": "BUSCAR:",
+                "zeroRecords": "SIN RESULTADOS ENCONTRADOS",
+                "paginate": {
+                    "first": "PRIMERO",
+                    "last": "ULTIMO",
+                    "next": "SIGUIENTE",
+                    "previous": "ANTERIOR"
+                }
+            }
         });
         $('.dataTables_length').addClass('bs-select');
     });
 </script>
 
 
+@*<script>
+        var filaselec;
+        function sun(id_fila) {
+
+
+            var prefname; // fname textbox
+            var prelname; //lname textbox
+
+
+            $('table tbody tr td').on('click', function () {
+                event.preventDefault();
+                if ($(this).parents("tr").hasClass('seleccionada')) {
+
+                    $(this).parents("tr").removeClass('seleccionada');
+                } else {
+                    $(this).parents("tr").addClass('seleccionada');
+                }
+                var prefname = $(this).parents("tr").find("td").eq(0).html();
+                filaselec = $(this).parents("tr");
+                $.post("Getproducto", { idproducto: prefname }, function (data) {
+
+                    $("#myModal").modal("show");
+
+
+
+                });
+
+                //$("#txtfname").val($(prefname).val());
+                //$("#txtlname").val($(prelname).val());
+            });
+            //save change button click evnet
+            $("#btnsubmit").click(function () {
+
+                prefname = $("#txtfname").val();
+                filaselec.find("td").eq(2).html($("#txtfname").val());
+                $(prelname).val($("#txtlname").val().replace("$", "").replace(",", ""));
+                filaselec.find("td").eq(4).html($("#txtlname").val().toLocaleString('en-US', { style: 'currency', currency: 'USD' }));
+                var cant1 = parseInt(filaselec.find("td").eq(2).text());
+                var cant2 = parseInt(filaselec.find("td").eq(3).text().replace("$", "").replace(",", ""));
+                var decuent = parseInt(filaselec.find("td").eq(4).text().replace("$", "").replace(",", ""));
+                var cantidad_itbis = (cant1 * cant2);
+                var itb1 = Math.floor(cantidad_itbis * parseInt(filaselec.find("td").eq(6).text().replace("$", "").replace(",", "")) / 100);
+                var total2 = 0;
+                //var itb = (cant1 * cant2)+ parseInt($('#idprod').val());
+                totalpagar = (cant1 * (cant2 - decuent)) + itb1;
+                filaselec.find("td").eq(7).html(parseFloat(totalpagar).toLocaleString('en-US', { style: 'currency', currency: 'USD' }));
+                filaselec.find("td").eq(5).html(parseFloat(itb1).toLocaleString('en-US', { style: 'currency', currency: 'USD' }));
+                var filas = document.querySelectorAll("#detalle tbody tr");
+
+                var total = 0;
+                var descuentosaplicar1 = 0;
+                // recorremos cada una de las filas
+                filas.forEach(function (e) {
+
+                    // obtenemos las columnas de cada fila
+                    var columnas = e.querySelectorAll("td");
+                    var totalprueba = columnas[7].textContent.replace("$", "").replace(",", "");
+                    var descuentosaplicar = columnas[4].textContent.replace("$", "").replace(",", "");
+                    // obtenemos los valores de la cantidad y importe
+                    var importe = parseFloat(columnas[7].textContent.replace("$", "").replace("$", ""));
+                    // mostramos el total por fila
+
+                    total += parseFloat(totalprueba);
+                    descuentosaplicar1 += parseFloat(descuentosaplicar);
+                });
+                $("#TotalaPagar").val(total.toLocaleString('en-US', { style: 'currency', currency: 'USD' }));
+                $("#descuentos").val(descuentosaplicar1.toLocaleString('en-US', { style: 'currency', currency: 'USD' }));
+
+                $("#myModal").modal("hide");
+            })
+
+        }
+    </script>*@
+
+<script>
+    $(document).ready(function () {
+
+        $('#tabla tr').click(function () {
+            var href = $(this).find("a").attr("href");
+            if (href) {
+                window.location = href;
+            }
+        });
+
+    });
+</script>
