--- a/SpointLiteVersion/Views/ciudads1/Create.cshtml
+++ b/SpointLiteVersion/Views/ciudads1/Create.cshtml
@@ -18,20 +18,22 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>ciudad</h4>
+          <h3 style="margin-left:15%;">CIUDAD</h3>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            
             <div class="form-group">
-                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                    <center>@Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })</center>
                     @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" id="enviar" value="Create" class="btn btn-default" />
+                    <input type="submit" id="enviar" value="AGREGAR" class="btn btn-success" />
                 </div>
             </div>
         </div>
@@ -39,7 +41,7 @@
         <script>
             $(document).ready(function () {
 
-
+                $("#Nombre").focus();
 
                 $("#enviar").click(function () {
                     $("#exampleModal").modal("hide");
