--- a/SpointLiteVersion/Views/tiposproductos/Create.cshtml
+++ b/SpointLiteVersion/Views/tiposproductos/Create.cshtml
@@ -16,33 +16,34 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h4>tiposproductos</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <div class="form-horizontal">
+        <h3 style="margin-left:15%;">TIPO</h3>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="col-md-10">
+                <label for="nombre" class="control-label col-md-2">NOMBRE</label>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" id="enviar" value="Create" class="btn btn-default" />
-                </div>
+                <center>
+                    @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                </center>
+                @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" id="enviar" value="AGREGAR" class="btn btn-success" />
+            </div>
+        </div>
+    </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+
     <script>
             $(document).ready(function () {
 
-
+                $("#nombre").focus();
 
                 $("#enviar").click(function () {
                     $("#exampleModal").modal("hide");
